// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prune branches should cut branches that doesn't include id: pruned all but 14 1`] = `
"1 RRDocument
  -1 RRDocumentType
  2 HTML 
    12 BODY 
      14 DIV id=\\"root\\" 
        15 RRText text=\\"      \\\\n    \\"
"
`;

exports[`prune branches should keep branches where target child nodes was, and gets moved to 1`] = `
"[
  {
    \\"type\\": 0,
    \\"data\\": {}
  },
  {
    \\"type\\": 1,
    \\"data\\": {}
  },
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1512,
      \\"height\\": 395
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"meta\\",
                    \\"attributes\\": {
                      \\"charset\\": \\"utf-8\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 5
                  }
                ],
                \\"id\\": 3
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"div\\",
                    \\"attributes\\": {
                      \\"id\\": \\"root\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"      \\\\n    \\",
                        \\"id\\": 15
                      }
                    ],
                    \\"id\\": 14
                  }
                ],
                \\"id\\": 12
              }
            ],
            \\"id\\": 2
          }
        ],
        \\"compatMode\\": \\"BackCompat\\",
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 2,
      \\"type\\": 2,
      \\"id\\": 15
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [
        {
          \\"parentId\\": 14,
          \\"id\\": 15
        }
      ],
      \\"adds\\": [
        {
          \\"parentId\\": 5,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 3,
            \\"textContent\\": \\"      \\\\n    \\",
            \\"id\\": 15
          }
        }
      ]
    }
  }
]"
`;

exports[`prune branches should remove branches based on child nodes that came in after fullsnapshot 1`] = `
"[
  {
    \\"type\\": 0,
    \\"data\\": {}
  },
  {
    \\"type\\": 1,
    \\"data\\": {}
  },
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1512,
      \\"height\\": 395
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"div\\",
                    \\"attributes\\": {
                      \\"id\\": \\"root\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 14
                  }
                ],
                \\"id\\": 12
              }
            ],
            \\"id\\": 2
          }
        ],
        \\"compatMode\\": \\"BackCompat\\",
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 14,
          \\"nextId\\": null,
          \\"node\\": {
            \\"id\\": 98,
            \\"type\\": 2,
            \\"tagName\\": \\"main\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"id\\": 99,
                \\"type\\": 2,
                \\"tagName\\": \\"canvas\\",
                \\"attributes\\": {},
                \\"childNodes\\": []
              }
            ]
          }
        }
      ]
    }
  }
]"
`;

exports[`prune branches should remove branches based on nodes that came in after fullsnapshot 1`] = `
"[
  {
    \\"type\\": 0,
    \\"data\\": {}
  },
  {
    \\"type\\": 1,
    \\"data\\": {}
  },
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1512,
      \\"height\\": 395
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"div\\",
                    \\"attributes\\": {
                      \\"id\\": \\"root\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 14
                  }
                ],
                \\"id\\": 12
              }
            ],
            \\"id\\": 2
          }
        ],
        \\"compatMode\\": \\"BackCompat\\",
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 14,
          \\"nextId\\": null,
          \\"node\\": {
            \\"id\\": 99,
            \\"type\\": 2,
            \\"tagName\\": \\"canvas\\",
            \\"attributes\\": {},
            \\"childNodes\\": []
          }
        }
      ]
    }
  }
]"
`;

exports[`prune branches should remove mutations that don't include ids 1`] = `
Object {
  "data": Object {
    "adds": Array [
      Object {
        "nextId": null,
        "node": Object {},
        "parentId": 14,
      },
    ],
    "attributes": Array [
      Object {
        "attributes": Object {
          "data-attr": "Kept",
        },
        "id": 14,
      },
    ],
    "removes": Array [
      Object {
        "id": 15,
        "parentId": 14,
      },
    ],
    "source": 0,
    "texts": Array [
      Object {
        "id": 15,
        "value": "Kept",
      },
    ],
  },
  "type": 3,
}
`;
